@@ -1,5 +1,12 @@
 2004-09-14 Seiichi SATO <ssato@sh.rim.or.jp>
 
+	* tool/mlconfig/mc_im.c:
+	- fixed segfault when the combo box for IIIMF was changed.
+	- minor improvements around IIIMF.
+	- minor cleanups.
+
+2004-09-14 Seiichi SATO <ssato@sh.rim.or.jp>
+
 	* tool/mlconfig/mc_im.c: cleanups.
 
 2004-09-13 Seiichi SATO <ssato@sh.rim.or.jp>
